src/app/configurations/seeds/seed-details/seed-details.component.css
.switch {
  float: right;
}

.ttInfo {
  opacity: 0.5;
  filter: alpha(opacity=50);
}

.ttInfo:hover {
  opacity: 0.7;
  filter: alpha(opacity=50);
  color: #0066ff !important;
}

.right-menu {
  margin-left: 1em;
  #max-width: 450px;
  #width: 100%;
}

.left-menu {
  max-width: 350px;
}

.mat-form-field {
  width: 100%;
}

